Rrtrofit Network Library for Android

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">Retrofit</string>
+
+    <string-array name="classlist">
+
+
+        <item>six</item>
+        <item>seven</item>
+        <item>eight</item>
+        <item>nine</item>
+        <item>ten</item>
+
+
+
+    </string-array>
 </resources>
